force-app/main/default/objects/Form_LCF_Outcome_Metric_1__c/Form_LCF_Outcome_Metric_1__c.object-meta.xml
<CustomObject>
    <description>Life Chances Fund Grant Management - Outcome Metric - 1.0</description>
    <label>Form LCF Outcome Metric 1.0</label>
    <nameField>
        <displayFormat>MET-{00000}</displayFormat>
        <label>Metric ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LCF Grant Outcome Metrics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>