force-app/main/default/objects/Form_LCF_Outcome_Metric_1__c/fields/grant_baseline__c.field-meta.xml
<CustomField>
    <fullName>grant_baseline__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Form LCF Grant Baseline 1.0</label>
    <referenceTo>Form_LCF_Grant_Baseline_1__c</referenceTo>
    <relationshipLabel>Form LCF Outcome Metrics</relationshipLabel>
    <relationshipName>outcome_metrics</relationshipName>
    <type>Lookup</type>
</CustomField>