force-app/main/default/objects/Form_LCF_Outcome_Metric_1__c/fields/grant_outcome__c.field-meta.xml
<CustomField>
    <fullName>grant_outcome__c</fullName>
    <label>Form LCF Grant Outcome 1.0</label>
    <referenceTo>Form_LCF_Grant_Outcome_1__c</referenceTo>
    <relationshipLabel>Form LCF Outcome Metrics</relationshipLabel>
    <relationshipName>outcome_metrics</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>