force-app/main/default/objects/Form_LCF_Outcome_Metric_1__c/fields/om_description__c.field-meta.xml
<CustomField>
    <fullName>om_description__c</fullName>
    <inlineHelpText>Description</inlineHelpText>
    <label>OM - Description</label>
    <type>TextArea</type>
</CustomField>