force-app/main/default/objects/Form_LCF_Outcome_Metric_1__c/fields/om_individual_cohort__c.field-meta.xml
<CustomField>
    <fullName>om_individual_cohort__c</fullName>
    <inlineHelpText>Is the outcome metric measured at individual or at cohort level?</inlineHelpText>
    <label>OM - Indvidual/Cohort</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Individual_Cohort</valueSetName>
    </valueSet>
</CustomField>